flapivor/tests/m3/hopix/typechecker/bad/38-record-matching-05.hopix
type T = { x : Int }

val main : Int = case { x = 0 }<> { { x = (_ : Int); y = (z : Int) }<> => z }